Adjust column count in forecast view

A call to QTreeWidget::clear() does not affect the column count. This
needs to be handled separately.

BUG: 428434